--- a/Graphics2/Graphics2.vcxproj.filters
+++ b/Graphics2/Graphics2.vcxproj.filters
@@ -63,16 +63,10 @@
     <ClInclude Include="WICTextureLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CubeNode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Material.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Mesh.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RobotNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Shader.h">
@@ -84,9 +78,6 @@
     <ClInclude Include="DirectXFramework.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PlaneNode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ILight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -96,8 +87,17 @@
     <ClInclude Include="AmbientLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PlaneNode.h">
+      <Filter>Header Files\Scene Nodes</Filter>
+    </ClInclude>
+    <ClInclude Include="RobotNode.h">
+      <Filter>Header Files\Scene Nodes</Filter>
+    </ClInclude>
     <ClInclude Include="CameraNode.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Scene Nodes</Filter>
+    </ClInclude>
+    <ClInclude Include="CubeNode.h">
+      <Filter>Header Files\Scene Nodes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -135,9 +135,6 @@
     <ClCompile Include="WICTextureLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CubeNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -147,20 +144,23 @@
     <ClCompile Include="Mesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SceneNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RobotNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ResourceManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="PlaneNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="CameraNode.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Scene Nodes</Filter>
+    </ClCompile>
+    <ClCompile Include="CubeNode.cpp">
+      <Filter>Source Files\Scene Nodes</Filter>
+    </ClCompile>
+    <ClCompile Include="PlaneNode.cpp">
+      <Filter>Source Files\Scene Nodes</Filter>
+    </ClCompile>
+    <ClCompile Include="RobotNode.cpp">
+      <Filter>Source Files\Scene Nodes</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneNode.cpp">
+      <Filter>Source Files\Scene Nodes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
