--- a/Graphics2/Graphics2.vcxproj.filters
+++ b/Graphics2/Graphics2.vcxproj.filters
@@ -99,11 +99,17 @@
     <ClInclude Include="CubeNode.h">
       <Filter>Header Files\Scene Nodes</Filter>
     </ClInclude>
-    <ClInclude Include="TerrainNode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="FastNoise.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture2D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlanetNode.h">
+      <Filter>Header Files\Scene Nodes</Filter>
+    </ClInclude>
+    <ClInclude Include="PawnNode.h">
+      <Filter>Header Files\Scene Nodes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -168,11 +174,14 @@
     <ClCompile Include="SceneNode.cpp">
       <Filter>Source Files\Scene Nodes</Filter>
     </ClCompile>
-    <ClCompile Include="TerrainNode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="FastNoise.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture2D.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PlanetNode.cpp">
+      <Filter>Source Files\Scene Nodes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
