--- a/Graphics2/Graphics2.vcxproj
+++ b/Graphics2/Graphics2.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="SimplexNoise.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="PlanetNode.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="Texture2D.h" />
     <ClInclude Include="Vector3.h" />
     <ClInclude Include="WICTextureLoader.h" />
