Fixed borealis normals

--- a/Graphics2/Graphics2.vcxproj
+++ b/Graphics2/Graphics2.vcxproj
@@ -181,6 +181,7 @@
     <ClInclude Include="MeshNode.h" />
     <ClInclude Include="NoiseManager.h" />
     <ClInclude Include="BasicNoise.h" />
+    <ClInclude Include="Orbitable.h" />
     <ClInclude Include="PawnNode.h" />
     <ClInclude Include="PhysicsNode.h" />
     <ClInclude Include="PlaneNode.h" />
