--- a/Graphics2/Graphics2.vcxproj.filters
+++ b/Graphics2/Graphics2.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="Orbitable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SatelliteNode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Graphics2.rc">
